move Theme Options from fallback to default; not every theme will have them

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2631,7 +2631,7 @@ Fallback="ScreenOptionsSimpleService"
 NextScreen=Branch.AfterInit()
 PrevScreen=Branch.AfterInit()
 
-LineNames="Sync,GameType,KeyConfig,TestInput,Input,Reload,Arcade,Appearance,Theme,GraphicSound,Profiles,Network,UI,Advanced,Credits"
+LineNames="Sync,GameType,KeyConfig,TestInput,Input,Reload,Arcade,Appearance,GraphicSound,Profiles,Network,UI,Advanced,Credits"
 LineSync="gamecommand;screen,ScreenGameplaySyncMachine;name,Calibrate Machine Sync"
 LineGameType="gamecommand;screen,ScreenSelectGame;name,Select Game"
 LineKeyConfig="gamecommand;screen,ScreenMapControllers;name,Key Joy Mappings"
@@ -2640,7 +2640,7 @@ LineInput="gamecommand;screen,ScreenOptionsInput;name,Input Options"
 LineReload="gamecommand;screen,ScreenReloadSongs;name,Reload Songs"
 LineArcade="gamecommand;screen,ScreenOptionsArcade;name,Arcade Options"
 LineAppearance="gamecommand;screen,ScreenAppearanceOptions;name,Appearance Options"
-LineTheme="gamecommand;screen,ScreenOptionsTheme;name,Theme Options"
+
 LineGraphicSound="gamecommand;screen,ScreenOptionsGraphicsSound;name,Graphics/Sound Options"
 LineProfiles="gamecommand;screen,ScreenOptionsManageProfiles;name,Profiles"
 LineNetwork="gamecommand;screen,ScreenNetworkOptions;name,Network Options"
