--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1218,6 +1218,9 @@ LineHighlightChangeToExitCommand=linear,0.1;diffuse,Color("Red");diffuseshift;ef
 [ScreenOptionsService]
 ShowHeader=false
 
+LineNames="Sync,GameType,KeyConfig,TestInput,Input,Reload,Arcade,Appearance,Theme,GraphicSound,Profiles,Network,UI,Advanced,Credits"
+LineTheme="gamecommand;screen,ScreenOptionsTheme;name,Theme Options"
+
 # ScreenOptionsSystemDirection"
 
 NumRowsShown=14
