Turns out we don't need PlayerJoined in [ScreenSelectMaster] UpdateOnMessage after all.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1706,9 +1706,7 @@ MorePage2OnCommand=visible,false
 MorePage2OffCommand=
 IdleCommentSeconds=0
 IdleTimeoutSeconds=0
-# xxx: apparently this isn't needed, according to Chris Danford, but it makes
-# things work, so we're keeping it in until the problem is fixed.
-UpdateOnMessage="PlayerJoined"
+UpdateOnMessage=""
 
 [ScreenSelectMasterBlank]
 Fallback="ScreenSelectMaster"
