more changes to Hello World, this time laying down the foundation for Reference->Singletons/Managers

--- a/Themes/HelloWorld/metrics.ini
+++ b/Themes/HelloWorld/metrics.ini
@@ -174,7 +174,7 @@ HeaderY=SCREEN_TOP+72
 
 ChoiceNames="Screens,Managers,Classes,LuaRef"
 ChoiceScreens="name,Screens;screen,ReferenceScreens"
-ChoiceManagers="name,Managers"
+ChoiceManagers="name,Managers;screen,ReferenceManagers"
 ChoiceClasses="name,Classes"
 ChoiceLuaRef="name,LuaRef;urlnoexit,http://kki.ajworld.net/lua/sm5/Lua.xml"
 DefaultChoice="Screens"
@@ -195,6 +195,7 @@ Class="ScreenSelectMaster"
 Fallback="ScreenSelectMaster"
 PrevScreen="ScreenReferenceMain"
 HeaderY=SCREEN_TOP+72
+AllowRepeatingInput=true
 
 ShowScroller=true
 LoopScroller=false
@@ -224,6 +225,32 @@ DefaultChoice="Screen"
 ## Managers and other Singletons
 [ReferenceManagers]
 Fallback="ReferenceBase"
+
+ScrollerX=SCREEN_CENTER_X
+ScrollerY=SCREEN_CENTER_Y*0.775
+ScrollerNumItemsToDraw=10
+ScrollerSecondsPerItem=0.1
+ScrollerTransform=function(self,offset,itemIndex,numItems) self:y((itemIndex-(numItems/2))+offset*64) end
+
+ChoiceNames="Announcer,Character,File,Game,GameSound,GameState,MemCard,Message,Noteskin,Prefs,Profile,Screen,Song,Stats,Theme,Unlock"
+DefaultChoice="Announcer"
+
+ChoiceAnnouncer="name,AnnouncerManager;"
+ChoiceCharacter="name,CharacterManager;"
+ChoiceFile="name,FileManager;"
+ChoiceGame="name,GameManager;"
+ChoiceGameSound="name,GameSoundManager;"
+ChoiceGameState="name,GameState;"
+ChoiceMemCard="name,MemcardManager;"
+ChoiceMessage="name,MessageManager;"
+ChoiceNoteskin="name,NoteskinManager;"
+ChoicePrefs="name,PrefsManager;"
+ChoiceProfile="name,ProfileManager;"
+ChoiceScreen="name,ScreenManager;"
+ChoiceSong="name,SongManager;"
+ChoiceStats="name,StatsManager;"
+ChoiceTheme="name,ThemeManager;"
+ChoiceUnlock="name,UnlockManager;"
 
 #@# STEPMANIA ROBOT MASTERS
 ### ANNOUNCER [man]
