Don't allow Options on ExtraStage (might be fun later)

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2009,7 +2009,7 @@ OptionsListTimeout=0.25
 #
 UsePlayerSelectMenu=false
 SelectMenuScreenName="ScreenPlayerOptions"
-OptionsMenuAvailable=GAMESTATE:GetPlayMode() ~= "PlayMode_Oni"
+OptionsMenuAvailable=AllowOptionsMenu()
 SelectMenuAvailable=false
 ModeMenuAvailable=true
 #
