it's a @#$#!%!$#%!@# function not a !@$$ #@$!%! variable you @#$!#$#!@$#!@$ #!@$!#$#!@$@ of !@#!@#$#!@$

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1886,7 +1886,7 @@ StageDisplayOffCommand=
 [ScreenEvaluationSummary]
 Fallback="ScreenEvaluation"
 #
-NextScreen=Branch.AfterSummary
+NextScreen=Branch.AfterSummary()
 #
 PlayMusic=false
 #
