add missing metrics for ScreenGameplay:SurviveTime

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3370,6 +3370,11 @@ SongNumberP2X=THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX") +
 SongNumberP2Y=SCREEN_TOP+24+7
 SongNumberP2OnCommand=visible,false
 SongNumberP2OffCommand=
+
+SurviveTimeX=SCREEN_CENTER_X
+SurviveTimeY=SCREEN_CENTER_Y+120
+SurviveTimeOnCommand=
+
 # online scoreboard
 # P1 is used when the only player is P2
 ScoreboardC1P1X=SCREEN_CENTER_X*0.25
