move difficulty display out of the way in NetSelMusic

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -2083,9 +2083,9 @@ UsersAY=16
 UsersOnCommand=draworder,2;zoom,0.75;shadowlength,1
 #
 ShowDifficultyDisplay=true
-DifficultyDisplayX=SCREEN_CENTER_X-240+200
-DifficultyDisplayY=SCREEN_CENTER_Y+185
-DifficultyDisplayOnCommand=draworder,105;fov,90;zoom,1;zoomy,0;sleep,0.35;smooth,0.35;zoomy,1
+DifficultyDisplayX=SCREEN_CENTER_X
+DifficultyDisplayY=SCREEN_CENTER_Y+158
+DifficultyDisplayOnCommand=draworder,105;fov,90;zoom,0.75
 DifficultyDisplayOffCommand=linear,0.25;zoomy,0;
 
 [StepsDisplayNet]
