--- a/Themes/home/metrics.ini
+++ b/Themes/home/metrics.ini
@@ -3,3 +3,5 @@
 FallbackTheme=default
 
 # Now you can edit or add things. ##############################################
+[ScreenEdit]
+EditModifiers="midi-note"
