--- a/Themes/new/metrics.ini
+++ b/Themes/new/metrics.ini
@@ -51,6 +51,24 @@ BPMDisplayY=SCREEN_CENTER_Y-128-40
 BPMDisplayOnCommand=draworder,115
 BPMDisplayOffCommand=
 #
+ShowTimeDisplay=true
+TimeDisplayX=SCREEN_CENTER_X-256+96+4
+TimeDisplayY=SCREEN_CENTER_Y-128-40
+TimeDisplayOnCommand=draworder,115;
+TimeDisplayOffCommand=
+#
+ShowSortDisplay=true
+SortDisplayX=SCREEN_CENTER_X-256+96+96+8
+SortDisplayY=SCREEN_CENTER_Y-128-40
+SortDisplayOnCommand=draworder,115;
+SortDisplayOffCommand=
+#
+ShowDifficultyList=true
+DifficultyListX=SCREEN_CENTER_X-128-64-64-32;
+DifficultyListY=SCREEN_CENTER_Y-96-32-4;
+DifficultyListOnCommand=draworder,115;
+DifficultyListOffCommand=
+#
 StepsDisplayP1X=SCREEN_CENTER_X-160
 StepsDisplayP1Y=SCREEN_CENTER_Y+184
 StepsDisplayP1OnCommand=draworder,155;
@@ -60,6 +78,24 @@ StepsDisplayP2X=SCREEN_CENTER_X+160
 StepsDisplayP2Y=SCREEN_CENTER_Y+184
 StepsDisplayP2OnCommand=draworder,155;
 StepsDisplayP2OffCommand=
+#
+ShowPaneDisplay=true
+PaneDisplayX=SCREEN_CENTER_X-128-32+4
+PaneDisplayY=SCREEN_CENTER_Y
+PaneDisplayOnCommand=
+PaneDisplayOffCommand=
+#
+ShowPaneDisplayP1=true
+PaneDisplayP1X=
+PaneDisplayP1Y=
+PaneDisplayP1OnCommand=
+PaneDisplayP1OffCommand=
+#
+ShowPaneDisplayP2=true
+PaneDisplayP2X=
+PaneDisplayP2Y=
+PaneDisplayP2OnCommand=
+PaneDisplayP2OffCommand=
 #
 PlayerFrameP1X=SCREEN_CENTER_X-160
 PlayerFrameP1Y=SCREEN_CENTER_Y+184
@@ -75,8 +111,8 @@ TextFormat="%04.0f"
 ApproachSeconds=0.25
 Commify=false
 LeadingZeroMultiplyColor=color("#777777FF")
-[RollingNumbersSongTime]
-TextFormat="%02i:02i"
+[RollingNumbersTimeDisplay]
+TextFormat="%02f:02f"
 ApproachSeconds=0.25
 Commify=false
 LeadingZeroMultiplyColor=color("#777777FF")
@@ -205,7 +241,63 @@ ShowStepsType=false
 StepsTypeX=-20-32
 StepsTypeY=7
 StepsTypeOnCommand=zoom,0.45
-
+[DifficultyList]
+ItemsSpacingY=16
+NumShownItems=5
+[StepsDisplayListRow]
+# TODO: Make this use DifficultyList?
+CapitalizeDifficultyNames=false
+NumShownItems=5
+ItemsSpacingY=16
+MoveCommand=
+FrameX=
+FrameY=
+FrameOnCommand=zoomto,60,14;
+FrameOffCommand=
+FrameSetCommand=%function(self,param) \
+	if param.CustomDifficulty then \
+		self:diffuse(ColorMidTone( CustomDifficultyToColor(param.CustomDifficulty) )); \
+	else \
+		self:diffuse(color('1,1,1,1')); \
+	end; \
+end;
+#
+NumTicks=10
+MaxTicks=10
+#
+ShowMeter=true
+MeterX=0
+MeterOnCommand=zoom,0.75;
+MeterSetCommand=%function(self,param) \
+	if param.CustomDifficulty then \
+		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
+		self:shadowcolor(CustomDifficultyToDarkColor(param.CustomDifficulty)); \
+	end; \
+end;
+#
+ShowDescription=false
+DescriptionX=0
+DescriptionOnCommand=0
+DescriptionSetCommand=%function(self,param) \
+	if self:GetText() == "" then \
+		self:settext("Edit"); \
+	end; \
+	if param.CustomDifficulty then \
+		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
+		self:shadowcolor(CustomDifficultyToDarkColor(param.CustomDifficulty)); \
+	end; \
+end;
+#
+ShowAutogen=false
+AutogenX=0
+AutogenY=0
+AutogenOnCommand=
+#
+ShowStepsType=false
+StepsTypeX=0
+StepsTypeY=0
+StepsTypeOnCommand=
+StepsTypeSetCommand=
 [ScreenGameplay]
 LifeP1OnCommand=draworder,105
 LifeP2OnCommand=draworder,105
