--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1152,7 +1152,8 @@ RequireStepOnMines=false
 InitialHoldLife=IsGame("pump") and 0.05 or 1
 MaxHoldLife=1
 RollBodyIncrementsCombo=false
-ScoreMissedHoldsAndRolls=not IsGame("pump")
+#ScoreMissedHoldsAndRolls=not IsGame("pump")
+ScoreMissedHoldsAndRolls=not IsGame("pump") and not IsGame("dance")
 PercentUntilColorCombo=0.25
 ComboStoppedAt=50
 AttackRunTimeRandom=6
