metrics for versus techno stuff

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1874,20 +1874,34 @@ DefaultChoice="Single"
 ChoiceNames=GameCompatibleModes()
 #
 OptionOrderAuto="1:2,2:1"
+# dance, pump, and likely others
 ChoiceSingle="name,Single;style,single;text,Single;screen,"..Branch.AfterSelectStyle()
 ChoiceDouble="name,Double;style,double;text,Double;screen,"..Branch.AfterSelectStyle()
 ChoiceSolo="name,Solo;style,solo;text,Solo;screen,"..Branch.AfterSelectStyle()
 ChoiceVersus="name,Versus;style,versus;text,Versus;screen,"..Branch.AfterSelectStyle()
 ChoiceCouple="name,Couple;style,couple;text,Couple;screen,"..Branch.AfterSelectStyle()
 ChoiceRoutine="name,Routine;style,routine;text,Routine;screen,"..Branch.AfterSelectStyle()
+# pump
 ChoiceHalfDouble="name,HalfDouble;style,halfdouble;text,HalfDouble;screen,"..Branch.AfterSelectStyle()
+# beat
 Choice5Keys="name,5Keys;style,single5;text,5Keys;screen,"..Branch.AfterSelectStyle()
 Choice7Keys="name,7Keys;style,single7;text,7Keys;screen,"..Branch.AfterSelectStyle()
 ChoiceVersus5="name,Versus5;style,versus5;text,Versus5;screen,"..Branch.AfterSelectStyle()
 ChoiceVersus7="name,Versus7;style,versus7;text,Versus7;screen,"..Branch.AfterSelectStyle()
 Choice10Keys="name,10Keys;style,double5;text,10Keys;screen,"..Branch.AfterSelectStyle()
 Choice14Keys="name,14Keys;style,double7;text,14Keys;screen,"..Branch.AfterSelectStyle()
+# kb7
 ChoiceKB7="name,kb7;style,single;screen,"..Branch.AfterSelectStyle()
+# techno
+ChoiceSingle4="name,Single4;style,single4;screen,"..Branch.AfterSelectStyle()
+ChoiceSingle5="name,Single5;style,single5;screen,"..Branch.AfterSelectStyle()
+ChoiceSingle8="name,Single8;style,single8;screen,"..Branch.AfterSelectStyle()
+ChoiceVersus4="name,Versus4;style,versus4;screen,"..Branch.AfterSelectStyle()
+ChoiceVersus5="name,Versus5;style,versus5;screen,"..Branch.AfterSelectStyle()
+ChoiceVersus8="name,Versus8;style,versus8;screen,"..Branch.AfterSelectStyle()
+ChoiceDouble4="name,Double4;style,double4;screen,"..Branch.AfterSelectStyle()
+ChoiceDouble5="name,Double5;style,double5;screen,"..Branch.AfterSelectStyle()
+ChoiceDouble8="name,Double8;style,double8;screen,"..Branch.AfterSelectStyle()
 #
 PerChoiceScrollElement=false
 PerChoiceIconElement=false
