[ScreenWithMenuElements] Add DelayMusicSeconds metric. requested in issue 540: http://ssc.ajworld.net/sm-ssc/bugtracker/view.php?id=540

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1578,6 +1578,7 @@ TimerSeconds=-1
 FirstUpdateCommand=
 PlayMusic=true
 MusicAlignBeat=true
+DelayMusicSeconds=0
 StopMusicOnBack=false
 WaitForChildrenBeforeTweeningOut=false
 CancelTransitionsOut=false
