[ScreenOptionsMasterPrefs] Allow for FastLoadAdditionalSongs preference to be called via the "conf" command.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2888,7 +2888,7 @@ Line20="conf,VisualDelaySeconds"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
-LineNames="Score,3,4,8,11,13,14,15,16,28,29,30"
+LineNames="Score,3,4,8,11,13,14,15,16,28,29,30,31"
 LineScore="lua,UserPrefScoringMode()"
 Line3="conf,TimingWindowScale"
 Line4="conf,LifeDifficulty"
@@ -2901,6 +2901,7 @@ Line16="conf,UseUnlockSystem"
 Line28="conf,AutogenSteps"
 Line29="conf,AutogenGroupCourses"
 Line30="conf,FastLoad"
+Line31="conf,FastLoadAdditionalSongs"
 
 # unused options
 #Line2="conf,ScoringType"
