[ScreenEdit] New menu to modify attacks.
Check the Area Menu (Enter Key) to have fun.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3941,6 +3941,14 @@ ColorDisabled=color("1,1,1,1")
 RowInitCommand=halign,0.5;valign,0.5;zoom,0.8;x,75;y,45;shadowlength,1
 OptionRowNormalMetricsGroup="OptionRowMiniMenuEditHelp"
 
+[ScreenMiniMenuAttackAtTimeMenu]
+Fallback="ScreenMiniMenu"
+ShowFooter=false
+
+[ScreenMiniMenuIndividualAttack]
+Fallback="ScreenMiniMenu"
+ShowFooter=false
+
 [ScreenMiniMenuKeysoundTrack]
 Fallback="ScreenMiniMenu"
 ShowFooter=false
