[MusicWheel] Added EmptyColor metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -936,6 +936,7 @@ SortMenuColor=color("1,1,1,1")
 RouletteColor=color("1,0,0,1")
 RandomColor=color("1,0,0,1")
 PortalColor=color("1,0,0,1")
+EmptyColor=color("1,0,0,1")
 
 SortOrders={ "SortOrder_Preferred", "SortOrder_Group", "SortOrder_Title", "SortOrder_BPM", "SortOrder_Artist", "SortOrder_Genre" }
 # SortOrders={ "SortOrder_Preferred", "SortOrder_Group", "SortOrder_Title", "SortOrder_BPM", "SortOrder_Popularity", "SortOrder_Artist", "SortOrder_Genre" }
