add missing metrics in [ScoreDisplayPercentage Percent]; should fix issue 782

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1260,15 +1260,24 @@ PercentP2X=0
 PercentP2Y=0
 PercentP2OnCommand=shadowlength,0;diffuse,PlayerColor(PLAYER_2)
 PercentP2OffCommand=
-DancePointsDigits=5
 PercentUseRemainder=false
 ApplyScoreDisplayOptions=true
 Format=FormatPercentScore
 PercentDecimalPlaces=2
 PercentTotalSize=5
-
 RemainderFormat=
 
+DancePointsDigits=5
+DancePointsP1X=0
+DancePointsP1Y=0
+DancePointsP1OnCommand=shadowlength,0;diffuse,PlayerColor(PLAYER_1)
+DancePointsP1OffCommand=
+DancePointsP2X=0
+DancePointsP2Y=0
+DancePointsP2OnCommand=shadowlength,0;diffuse,PlayerColor(PLAYER_2)
+DancePointsP2OffCommand=
+
+# are these even used? -f
 PercentP3X=0
 PercentP3Y=0
 PercentP3OnCommand=shadowlength,0;diffuse,PlayerColor(PLAYER_1)
