[PaneDisplay] Added NullCountString metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -4503,3 +4503,6 @@ TimerStealth=true
 ForceTimer=true
 TimerMetricsGroup="MenuTimerNoSound"
 TimerOnCommand=visible,false
+
+[PaneDisplay]
+NullCountString=""
