[PrefsManager] Add StretchBackgrounds preference.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2926,7 +2926,7 @@ Line31="conf,FastLoadAdditionalSongs"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
-LineNames="1,2,3,4,5,14,15,17,18,19"
+LineNames="1,2,3,4,5,14,15,SB,17,18,19"
 Line1="conf,Language"
 Line2="conf,Announcer"
 Line3="conf,Theme"
@@ -2934,6 +2934,7 @@ Line4="conf,DefaultNoteSkin"
 Line5="conf,PercentageScoring"
 Line14="conf,RandomBackgroundMode"
 Line15="conf,BGBrightness"
+LineSB="conf,StretchBackgrounds"
 Line17="conf,ShowDancingCharacters"
 Line18="conf,ShowBeginnerHelper"
 Line19="conf,NumBackgrounds"
