add win/lose display to Evaluation on Rave mode; fixes issue 578 (http://ssc.ajworld.net/sm-ssc/bugtracker/view.php?id=578)

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1870,6 +1870,21 @@ SongInformationY=SCREEN_TOP+100
 SongInformationOnCommand=playcommand,"Set";draworder,105
 SongInformationOffCommand=
 
+ShowWinArea=GAMESTATE:GetPlayMode() == 'PlayMode_Rave'
+WinFrameP1X=
+WinFrameP1Y=
+WinFrameP1OnCommand=
+WinFrameP2X=
+WinFrameP2Y=
+WinFrameP2OnCommand=
+#----#
+WinP1X=SCREEN_CENTER_X-224
+WinP1Y=SCREEN_BOTTOM-224
+WinP1OnCommand=draworder,101
+WinP2X=SCREEN_CENTER_X+224
+WinP2Y=SCREEN_BOTTOM-224
+WinP2OnCommand=draworder,101
+
 [ScreenEvaluationNormal]
 Fallback="ScreenEvaluation"
 #
