change /new, merge with latest? BGeffects still need changing.

--- a/Themes/new/metrics.ini
+++ b/Themes/new/metrics.ini
@@ -34,20 +34,26 @@ StageDisplayOffCommand=
 MusicWheelX=SCREEN_CENTER_X+180
 MusicWheelY=SCREEN_CENTER_Y
 #
-BannerX=SCREEN_CENTER_X-160+32
-BannerY=SCREEN_CENTER_Y-100
+BannerX=SCREEN_CENTER_X-160
+BannerY=SCREEN_CENTER_Y-64-4
 BannerOnCommand=draworder,111;scaletoclipped,256,80
 BannerOffCommand=
 #
 ShowBannerFrame=true
 BannerFrameX=SCREEN_CENTER_X-128-32
-BannerFrameY=SCREEN_CENTER_Y-96-4
+BannerFrameY=SCREEN_CENTER_Y-64-4
 BannerFrameOnCommand=draworder,110
 BannerFrameOffCommand=
 # 
+ShowStageDisplay=true
+StageDisplayX=SCREEN_CENTER_X-128-128+12
+StageDisplayY=SCREEN_CENTER_Y-64-64
+StageDisplayOnCommand=draworder,115;zoom,0.75
+StageDisplayOffCommand=
+#
 ShowBPMDisplay=true
-BPMDisplayX=SCREEN_CENTER_X-256
-BPMDisplayY=SCREEN_CENTER_Y-128-40
+BPMDisplayX=SCREEN_CENTER_X-256+12+160
+BPMDisplayY=SCREEN_CENTER_Y-64-64
 BPMDisplayOnCommand=draworder,115
 BPMDisplayOffCommand=
 #
