Move stage display up if Center1Player; fixes issue 777

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1386,7 +1386,7 @@ BPMDisplayOffCommand=bounceend,0.25;zoom,0
 #
 ShowStageDisplay=true
 StageDisplayX=SCREEN_CENTER_X
-StageDisplayY=SCREEN_BOTTOM-50
+StageDisplayY=Center1Player() and SCREEN_BOTTOM-76 or SCREEN_BOTTOM-50
 StageDisplayOnCommand=draworder,102
 StageDisplayOffCommand=bounceend,0.25;zoom,0
 StageDisplayUseShortString=true
