--- a/NoteSkins/dance/Delta/metrics.ini
+++ b/NoteSkins/dance/Delta/metrics.ini
@@ -31,7 +31,7 @@ HoldHeadNoteColorTextureCoordSpacingY=0.125
 [GhostArrowDim]
 InitCommand=
 NoneCommand=
-HitMineCommand=blend,'BlendMode_Add';diffuse,1,1,1,1;zoom,1;rotationz,0;decelerate,0.3;rotationz,90;linear,0.3;rotationz,180;diffusealpha,0
+HitMineCommand=stoptweening;blend,'BlendMode_Add';diffuse,1,1,1,1;zoom,1;rotationz,0;decelerate,0.3;rotationz,90;linear,0.3;rotationz,180;diffusealpha,0
 MissCommand=
 W5Command=diffuse,1.0,0.6,1.0,1;sleep,0.1;decelerate,0.4;diffusealpha,0
 W4Command=diffuse,0.6,1.0,1.0,1;sleep,0.1;decelerate,0.4;diffusealpha,0
@@ -44,7 +44,7 @@ HeldCommand=diffuse,1.0,1.0,0.7,1;zoom,1;linear,0.2;zoom,0.9;linear,0.1;diffusea
 [GhostArrowBright]
 InitCommand=
 NoneCommand=
-HitMineCommand=blend,'BlendMode_Add';diffuse,1,1,1,1;zoom,1;rotationz,0;decelerate,0.3;rotationz,90;linear,0.3;rotationz,180;diffusealpha,0
+HitMineCommand=finishtweening;blend,'BlendMode_Add';diffuse,1,1,1,1;zoom,1;rotationz,0;decelerate,0.3;rotationz,90;linear,0.3;rotationz,180;diffusealpha,0
 MissCommand=
 W5Command=diffuse,1.0,0.6,1.0,1;sleep,0.1;decelerate,0.4;diffusealpha,0
 W4Command=diffuse,0.6,1.0,1.0,1;sleep,0.1;decelerate,0.4;diffusealpha,0
