--- a/NoteSkins/kb7/default/metrics.ini
+++ b/NoteSkins/kb7/default/metrics.ini
@@ -32,7 +32,7 @@ HoldHeadNoteColorTextureCoordSpacingY=0.125
 
 [GhostArrowDim]
 NoneCommand=
-HitMineCommand=blend,'BlendMode_Add';diffuse,1,1,1,1;zoom,1;rotationz,0;smooth,0.3;rotationz,90;linear,0.3;rotationz,180;diffusealpha,0
+HitMineCommand=finishtweening;blend,'BlendMode_Add';diffuse,1,1,1,1;zoom,1;rotationz,0;smooth,0.3;rotationz,90;linear,0.3;rotationz,180;diffusealpha,0
 MissCommand=
 W5Command=diffuse,0.8,0.0,0.6,1;zoom,1;decelerate,0.1;zoom,1.1;decelerate,0.1;diffusealpha,0
 W4Command=diffuse,0.3,0.8,1.0,1;zoom,1;decelerate,0.1;zoom,1.1;decelerate,0.1;diffusealpha,0
@@ -45,7 +45,7 @@ HeldCommand=diffuse,1.0,1.0,0.3,1;decelerate,0.1;zoom,1.1;decelerate,0.1;diffuse
 
 [GhostArrowBright]
 NoneCommand=
-HitMineCommand=blend,'BlendMode_Add';diffuse,1,1,1,1;zoom,1;rotationz,0;linear,0.3;rotationz,90;linear,0.3;rotationz,180;diffusealpha,0
+HitMineCommand=finishtweening;blend,'BlendMode_Add';diffuse,1,1,1,1;zoom,1;rotationz,0;linear,0.3;rotationz,90;linear,0.3;rotationz,180;diffusealpha,0
 MissCommand=
 W5Command=diffuse,0.8,0.0,0.6,1;zoom,1;decelerate,0.1;zoom,1.1;decelerate,0.1;diffusealpha,0
 W4Command=diffuse,0.3,0.8,1.0,1;zoom,1;decelerate,0.1;zoom,1.1;decelerate,0.1;diffusealpha,0
