Quick options to report a bug, go on IRC

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1788,7 +1788,7 @@ UpdateOnMessage=""
 #
 NumChoicesOnPage1=100
 DefaultChoice="GameStart"
-ChoiceNames="GameStart,Options,Edit,Jukebox,Exit"
+ChoiceNames="GameStart,Options,Edit,Jukebox,ReportBug,IRC,Exit"
 ChoiceGameStart="applydefaultoptions;text,Game Start;screen,"..Branch.StartGame()
 #ChoiceQuickPlay="applydefaultoptions;text,Quick Play;"
 ChoiceOptions="screen,ScreenOptionsService;text,Options"
@@ -1798,6 +1798,8 @@ ChoiceExit="screen,ScreenExit;text,Exit"
 ChoiceOnline="screen,ScreenNetworkOptions;text,Play Online"
 ChoiceGameSelect="screen,ScreenSelectGame;text,Select Game"
 ChoiceJukebox="screen,ScreenJukeboxMenu;text,Jukebox"
+ChoiceReportBug="urlnoexit,http://ssc.ajworld.net/sm-ssc/bugtracker/;text,Report Bug"
+ChoiceIRC="urlnoexit,http://chat.mibbit.com/?server=irc.badnik.net&channel=%23sm-ssc&nick=StepMania_player;text,Chat on IRC"
 ChoiceSandbox="screen,ScreenTest;text,Sandbox"
 #
 AllowRepeatingInput=true
