Editor respects Custom SpeedMods.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3923,7 +3923,7 @@ ShowStyleIcon=false
 
 LineNames="1,2,3,4,5,6,R,7,8,9,10,Attacks,11,12,13,14,15,16"
 # uses legacy speed line
-Line1="list,Speed"
+Line1="lua,SpeedMods()"
 Line2="list,Accel"
 Line3="list,Effect"
 Line4="list,Appearance"
