add CreateZip from SM4 betas. Someone should probably add this to the xcode project file.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -136,6 +136,7 @@ Course.cpp Course.h \
 CourseLoaderCRS.cpp CourseLoaderCRS.h \
 CourseUtil.cpp CourseUtil.h \
 CourseWriterCRS.cpp CourseWriterCRS.h \
+CreateZip.cpp CreateZip.h \
 CryptHelpers.cpp CryptHelpers.h \
 DateTime.cpp DateTime.h \
 Difficulty.cpp Difficulty.h \
