--- a/src/StepMania-net2005.vcproj
+++ b/src/StepMania-net2005.vcproj
@@ -1075,6 +1075,14 @@
 				>
 			</File>
 			<File
+				RelativePath="CreateZip.cpp"
+				>
+			</File>
+			<File
+				RelativePath="CreateZip.h"
+				>
+			</File>
+			<File
 				RelativePath="DateTime.cpp"
 				>
 			</File>
