hide timer on ScreenNoise

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -4457,6 +4457,7 @@ Class="ScreenAttract"
 NextScreen="ScreenInit"
 PrevScreen="ScreenInit"
 TimerSeconds=3600
+TimerStealth=true
 ShowCreditDisplay=false
 
 [ScreenTitleJoin]
