[ScoreDisplayRave] Add FrameBase and FrameOver to the metrics.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1322,6 +1322,24 @@ LevelP2Y=
 LevelP2OnCommand=
 LevelP2OffCommand=
 
+FrameBaseP1X=
+FrameBaseP1Y=
+FrameBaseP1OnCommand=
+FrameBaseP1OffCommand=
+FrameBaseP2X=
+FrameBaseP2Y=
+FrameBaseP2OnCommand=
+FrameBaseP2OffCommand=
+
+FrameOverP1X=
+FrameOverP1Y=
+FrameOverP1OnCommand=
+FrameOverP1OffCommand=
+FrameOverP2X=
+FrameOverP2Y=
+FrameOverP2OnCommand=
+FrameOverP2OffCommand=
+
 [ScoreKeeperRave]
 AttackDurationSeconds=3.0
 
